auth_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-gemini
  namespace: baptistero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-gemini
  template:
    metadata:
      labels:
        app: auth-gemini
    spec:
      imagePullSecrets:
        - name: dockerhub-auth
      containers:
        - name: gemini-auth
          image: baptistero/gemini-auth:002
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
