auth_postgres_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres
  namespace: baptistero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14
          args: ["-c", "port=5433"]
          ports:
            - containerPort: 5433
