mongo_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyzer-mongo
  namespace: baptistero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analyzer-mongo
  template:
    metadata:
      labels:
        app: analyzer-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6.0
          ports:
            - containerPort: 27017
