postgres_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyzer-postgres
  namespace: baptistero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analyzer-postgres
  template:
    metadata:
      labels:
        app: analyzer-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 5432
