text_analyzer_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemini-text-analyzer
  namespace: baptistero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gemini-text-analyzer
  template:
    metadata:
      labels:
        app: gemini-text-analyzer
    spec:
      imagePullSecrets:
        - name: dockerhub-auth
      containers:
        - name: gemini-text-analyzer
          image: baptistero/gemini-text-analyzer:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
