auth_postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres
  namespace: baptistero
spec:
  selector:
    app: auth-postgres
  ports:
    - port: 5433
      targetPort: 5433
  type: ClusterIP
