mongo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analyzer-mongo
  namespace: baptistero
spec:
  selector:
    app: analyzer-mongo
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
