text_analyzer_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: text-analyzer
  namespace: baptistero
spec:
  selector:
    app: gemini-text-analyzer
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
